--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -6,6 +6,8 @@ engines:
         enabled: false
       SC2154:
         enabled: false
+      SC2015:
+        enabled: false
 
 ratings:
    paths:
