--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,11 @@ addons:
   apt:
     sources:
       - debian-sid
-    packages:
-      - shellcheck
+
+before-script:
+  - "sudo apt-get install cabal-install"
+  - "cabal update"
+  - "cabal install shellcheck"
 
 script:
  - bash -c 'shopt -s globstar; shellcheck install.sh'
@@ -16,4 +19,3 @@ script:
 
 matrix:
   fast_finish: true
-
