--- a/.travis.yml
+++ b/.travis.yml
@@ -2,20 +2,14 @@ language: bash
 
 sudo: false
 
-addons:
-  apt:
-    sources:
-      - debian-sid
-
-before-script:
-  - "sudo apt-get install cabal-install"
-  - "cabal update"
-  - "cabal install shellcheck"
+before_install:
+  - wget https://storage.googleapis.com/shellcheck/shellcheck-latest.linux.x86_64.tar.xz
+  - tar xf shellcheck-latest.linux.x86_64.tar.xz
 
 script:
- - bash -c 'shopt -s globstar; shellcheck install.sh'
- - bash -c 'shopt -s globstar; shellcheck SOURCES/rbdef'
- - bash -c 'shopt -s globstar; shellcheck SOURCES/rbbuild SOURCES/blds/*'
+ - bash -c 'shopt -s globstar; ./shellcheck-latest/shellcheck install.sh'
+ - bash -c 'shopt -s globstar; ./shellcheck-latest/shellcheck SOURCES/rbdef'
+ - bash -c 'shopt -s globstar; ./shellcheck-latest/shellcheck SOURCES/rbbuild SOURCES/blds/*'
 
 matrix:
   fast_finish: true
