--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: bash
 
-sudo: required
-
 services:
   - docker
 
@@ -10,17 +8,19 @@ matrix:
 
 env:
   global:
-    - IMAGE=essentialkaos/perfecto:centos7
+    - SHELLCHECK_VERSION=0.7.1 IMAGE=essentialkaos/perfecto:centos7
 
 before_install:
-  - wget https://storage.googleapis.com/shellcheck/shellcheck-stable.linux.x86_64.tar.xz
-  - tar xf shellcheck-stable.linux.x86_64.tar.xz
+  - wget https://github.com/koalaman/shellcheck/releases/download/v${SHELLCHECK_VERSION}/shellcheck-v${SHELLCHECK_VERSION}.linux.x86_64.tar.xz
+  - tar xf shellcheck-v${SHELLCHECK_VERSION}.linux.x86_64.tar.xz
+  - mv shellcheck-v${SHELLCHECK_VERSION} shellcheck-latest
   - ./shellcheck-stable/shellcheck --version
   - docker pull "$IMAGE"
   - wget https://kaos.sh/perfecto/perfecto-docker
   - chmod +x perfecto-docker
 
 script:
+ - .travis/script.sh ../SOURCES/defs
  - bash -c 'shopt -s globstar; ./shellcheck-stable/shellcheck install.sh'
  - bash -c 'shopt -s globstar; ./shellcheck-stable/shellcheck SOURCES/rbdef'
  - bash -c 'shopt -s globstar; ./shellcheck-stable/shellcheck SOURCES/rbbuild SOURCES/blds/*'
