--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Run Perfecto docker image
-        uses: docker://essentialkaos/perfecto:slim
+        uses: docker://essentialkaos/perfecto:micro
         with:
           args: --version
 
@@ -70,7 +70,7 @@ jobs:
 
       - name: Run Perfecto check
         env:
-          IMAGE: essentialkaos/perfecto:slim
+          IMAGE: essentialkaos/perfecto:micro
         run: |
           ./perfecto-docker rbbuild.spec
           ./perfecto-docker rbbuild-defs.spec
