--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Check specs with Perfecto
+      - name: Check spec with Perfecto
         uses: essentialkaos/perfecto-action@v1
         with:
           files: rbbuild.spec rbbuild-defs.spec
