--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run defs tests
-        run: .scripts/script.sh SOURCES/defs
+        run: .github/scripts/def_check.sh SOURCES/defs
 
   Shellcheck:
     name: Shellcheck
