--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Check scripts with Shellcheck
         uses: essentialkaos/shellcheck-action@v1
         with:
-          files: install.sh SOURCES/rbdef SOURCES/rbbuild SOURCES/blds/*
+          files: install.sh SOURCES/rbdef SOURCES/rbbuild SOURCES/libexec/*.shx SOURCES/libexec/builders/*.shx
 
   Perfecto:
     name: Perfecto
